--- a/index.html
+++ b/index.html
@@ -1496,7 +1496,7 @@
 
       /* Lage & Anfahrt Section Anpassungen für Mobilgeräte */
       .lage-anfahrt-section {
-        padding: 0 20px 40px 20px; /* Weniger Padding */
+        padding: 0 20px 40px 20px; /* Globaler linker Padding für die Sektion auf 20px gesetzt */
       }
 
       .lage-anfahrt-section .section-divider {
@@ -1515,6 +1515,8 @@
       .anfahrt-details-container {
         width: 100%; /* Volle Breite */
         margin-top: 40px; /* Angepasster Abstand */
+        padding-left: 30px; /* Erhöht den linken Padding des Inhaltsbereichs (40px gesamt - 20px von Sektion) */
+        padding-right: 30px;
       }
 
       .anfahrt-row {
