--- a/index.html
+++ b/index.html
@@ -1404,6 +1404,8 @@
       .mehr-erfahren-button {
         padding: 10px 20px; /* Button-Padding anpassen */
         font-size: 14px; /* Kleinere Schrift für Button */
+        opacity: 1; /* Button immer sichtbar machen */
+        pointer-events: auto; /* Button immer klickbar machen */
       }
 
       .leistung-line {
