--- a/index.html
+++ b/index.html
@@ -1206,6 +1206,11 @@
 
     /* Responsive Anpassungen für das Menü */
     @media (max-width: 768px) {
+      /* Entfernt das blaue Aufleuchten beim Antippen auf Mobilgeräten */
+      * {
+        -webkit-tap-highlight-color: transparent;
+      }
+
       html, body {
         overflow-x: hidden; /* Verhindert horizontales Scrollen auf dem Handy */
       }
