--- a/index.html
+++ b/index.html
@@ -1581,11 +1581,17 @@
       }
 
       .werte-sticky-titles {
-        position: static; /* Sticky-Verhalten aufheben */
+        position: -webkit-sticky; /* Für Safari-Kompatibilität */
+        position: sticky;
+        top: 93px; /* Höhe deiner Navigationsleiste .main-nav */
+        background-color: #ffffff; /* Hintergrundfarbe der Sektion, um durchscheinenden Text zu verhindern */
+        z-index: 2; /* Stellt sicher, dass es über dem scrollenden Inhalt der Liste liegt, aber unter der Hauptnavigation */
         height: auto; /* Automatische Höhe */
         padding-left: 0; /* Keinen linken Einzug für die Titel */
+        padding-top: 15px; /* Etwas Abstand oben innerhalb des sticky Blocks */
+        padding-bottom: 15px; /* Abstand nach unten, bevor die Liste beginnt */
         text-align: center; /* Titel zentrieren */
-        margin-bottom: 20px; /* Abstand zur Werteliste */
+        /* margin-bottom: 20px; /* Wird durch sticky-Positionierung und padding-bottom gehandhabt */
       }
 
       .werte-section .sub-heading-container {
