--- a/index.html
+++ b/index.html
@@ -1610,7 +1610,7 @@
       }
 
       .wert-item {
-        margin-bottom: 40px; /* Weniger Abstand zwischen den Items */
+        margin-bottom: 60px; /* Vergrößerter Abstand zwischen den Items auf Mobilgeräten */
         align-items: flex-start; /* Beibehalten, aber Nummer und Text könnten enger zusammenrücken */
       }
 
