--- a/index.html
+++ b/index.html
@@ -1641,13 +1641,13 @@
         height: auto; /* Höhe automatisch anpassen */
         padding: 40px 20px; /* Padding für Mobilgeräte */
         flex-direction: column; /* Elemente untereinander anordnen */
-        text-align: center; /* Standard-Textausrichtung für den Footer-Inhalt */
+        text-align: left; /* Standard-Textausrichtung für den Footer-Inhalt auf links geändert */
       }
 
       .footer-top-left-content {
         position: static; /* Positionierung aufheben */
-        text-align: center; /* Inhalt zentrieren */
         margin-bottom: 40px; /* Abstand zum nächsten Element */
+        text-align: left; /* Inhalt linksbündig */
       }
 
       .footer-new-title {
@@ -1696,7 +1696,7 @@
         position: static;
         font-size: 20px; /* Kleinere Schriftgröße */
         margin-bottom: 30px; /* Abstand zum nächsten Block */
-        text-align: center;
+        text-align: left; /* Text linksbündig */
       }
 
       .footer-contact-hours-container {
@@ -1713,7 +1713,7 @@
         flex-basis: auto; /* Automatische Breite */
         padding-left: 0; /* Linken Einzug entfernen */
         margin-right: 0; /* Rechten Abstand entfernen */
-        text-align: center; /* Text in den Spalten zentrieren */
+        text-align: left; /* Text in den Spalten linksbündig */
         margin-bottom: 20px; /* Abstand zwischen Kontakt und Öffnungszeiten */
       }
       .footer-contact-column:last-child,
@@ -1727,7 +1727,7 @@
       }
       .footer-hours-days,
       .footer-hours-times {
-        text-align: center; /* Zentriert Tage und Zeiten */
+        text-align: left; /* Tage und Zeiten linksbündig */
         padding-right: 0; /* Rechten Einzug entfernen */
         margin-right: 0; /* Rechten Abstand entfernen */
       }
@@ -1735,7 +1735,7 @@
 
       .footer-bottom-right-links {
         position: static;
-        text-align: center; /* Links zentrieren */
+        text-align: left; /* Links linksbündig */
         margin-top: 20px; /* Abstand nach oben, falls es das letzte Element ist */
       }
       .footer-bottom-right-links a {
