--- a/index.html
+++ b/index.html
@@ -1667,25 +1667,37 @@
       }
 
       .footer-logo-wrapper {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end; /* Logo am unteren Rand des Wrappers ausrichten */
+        z-index: 0; /* Stellt sicher, dass es hinter dem anderen Inhalt liegt */
         opacity: 0.1; /* Logo noch transparenter oder ggf. ausblenden (display: none;) */
-        margin-bottom: 30px; /* Abstand zum nächsten Element */
-        order: 2; /* Reihenfolge ändern, falls gewünscht, z.B. nach dem Text */
         overflow-x: hidden; /* Verhindert, dass das Logo horizontales Scrollen verursacht */
+        margin-bottom: 0; /* Entfernt, da absolute Positionierung */
+        order: unset; /* Entfernt, da absolute Positionierung */
+        padding-bottom: 20px; /* Abstand des Logos zum unteren Rand des Footers */
+        box-sizing: border-box; /* Stellt sicher, dass Padding die Höhe nicht beeinflusst */
       }
 
       .footer-logo .bazara-style {
-        font-size: 120px; /* Deutlich kleiner */
+        font-size: 80px; /* Weiter verkleinert für mobile Ansicht */
       }
       .footer-logo .safia-style {
-        font-size: 125px; /* Deutlich kleiner */
+        font-size: 85px; /* Weiter verkleinert für mobile Ansicht */
       }
       .footer-logo .subtitle-style {
-        font-size: 20px; /* Deutlich kleiner */
-        margin-top: 10px;
+        font-size: 16px; /* Weiter verkleinert für mobile Ansicht */
+        margin-top: 8px; /* Angepasster Abstand nach oben */
       }
 
       .footer-bottom-wrapper {
-        position: static; /* Positionierung aufheben */
+        position: relative; /* Notwendig für z-index und um über dem Logo zu liegen */
+        z-index: 1; /* Stellt sicher, dass dieser Container über dem Logo-Wrapper liegt */
         display: flex;
         flex-direction: column;
         align-items: flex-start; /* Alle unteren Elemente linksbündig ausrichten */
