--- a/leistungen.html
+++ b/leistungen.html
@@ -145,6 +145,11 @@
       padding-bottom: 1px; /* Etwas Platz für die Linie unter dem Text */
     }
 
+    /* Nummerierung im Desktop-Menü standardmäßig ausblenden */
+    .main-nav .nav-links a .menu-item-number {
+      display: none;
+    }
+
     .nav-links a:hover {
       text-decoration: none; /* Entfernt die Standard-Unterstreichung */
     }
@@ -152,7 +157,7 @@
     .nav-links a::after {
       content: '';
       position: absolute;
-      width: 0;
+      width: 0; 
       height: 1.3px; /* Dicke der Linie, wie in index.html */
       bottom: 0;
       left: 0;
@@ -164,9 +169,9 @@
       width: 100%; /* Linie dehnt sich auf volle Breite aus */
     }
 
-    /* Klasse für dunkle Navigationslinks */
-    .nav-links.dark-text a {
-      color: #000000; /* Schwarz, wenn über hellem Hintergrund */
+    /* Anpassung für Navigationslink-Farbe basierend auf .main-nav.nav-text-dark */
+    .main-nav.nav-text-dark .nav-links a { /* Gilt für Desktop */
+      color: #000000; /* Schwarz, wenn .nav-text-dark gesetzt ist */
     }
 
     /* Hero Section für das große Bild */
@@ -1289,6 +1294,316 @@
       background-color: #e9e9e9; /* Heller Hintergrund für den Platzhalter */
     }
 
+    /* Hamburger Menu Styles */
+    .hamburger-menu {
+      display: none; /* Standardmäßig auf Desktop ausgeblendet */
+      cursor: pointer;
+      padding: 10px; /* Etwas Klickfläche */
+      margin-right: 10px; /* Abstand zum rechten Rand, falls .main-nav padding nicht ausreicht */
+      z-index: 1001; /* Über dem Rest der Navigationsleiste, falls nötig */
+    }
+
+    .hamburger-menu .bar {
+      display: block;
+      width: 25px;
+      height: 3px;
+      margin: 5px auto;
+      transition: all 0.3s ease-in-out;
+      background-color: #ffffff; /* Standardfarbe für Bars (wenn Nav-Text weiß ist) */
+    }
+
+    .main-nav.nav-text-dark .hamburger-menu .bar {
+      background-color: #0c0c0c; /* Farbe für Bars (wenn Nav-Text dunkel ist) */
+    }
+
+    /* Animation für Hamburger zu X */
+    .main-nav.nav-active .hamburger-menu .bar1 {
+      transform: rotate(-45deg) translate(-5px, 6px);
+    }
+    .main-nav.nav-active .hamburger-menu .bar2 {
+      opacity: 0;
+    }
+    .main-nav.nav-active .hamburger-menu .bar3 {
+      transform: rotate(45deg) translate(-5px, -6px);
+    }
+
+    /* Farbe des Hamburger-Icons (X) wenn das mobile Menü aktiv ist, auf dunklem Hintergrund */
+    .main-nav.nav-active .hamburger-menu .bar {
+      background-color: #0c0c0c; /* Dunkle Farbe für das X auf weißem Menühintergrund */
+    }
+
+    /* Responsive Anpassungen für das Menü */
+    @media (max-width: 768px) {
+      /* Entfernt das blaue Aufleuchten beim Antippen auf Mobilgeräten */
+      * {
+        -webkit-tap-highlight-color: transparent;
+      }
+
+      html, body {
+        overflow-x: hidden; /* Verhindert horizontales Scrollen auf dem Handy */
+      }
+
+      /* Linken Abstand des Logos im Menü auf Mobilgeräten reduzieren */
+      .menu-logo .logo-link {
+        padding-left: 0; /* Entfernt den zusätzlichen linken Abstand des Logos */
+      }
+
+      .main-nav .nav-links {
+        display: flex;
+        flex-direction: column;
+        position: fixed; /* Geändert von absolute zu fixed */
+        top: 0; /* Geändert von 93px zu 0, um oben zu starten */
+        left: 0;
+        width: 100%; /* Nimmt die volle Breite ein (war 100%, ist ok für fixed) */
+        /* height: 100dvh; Wird im active-Status gesetzt, max-height für Animation */
+        background-color: #ffffff; /* Hintergrund für das mobile Menü auf Weiß geändert */
+        /* box-shadow: 0 4px 8px rgba(0,0,0,0.2); Entfernt, da Vollbild */
+        z-index: 1000; /* Auf gleicher Ebene wie main-nav, damit Hamburger (1001) darüber liegt */
+
+        opacity: 0;
+        max-height: 0;
+        overflow-y: auto; /* Erlaube Scrollen, falls Inhalt länger als Bildschirmhöhe */
+        visibility: hidden;
+        padding-top: 0;
+        padding-bottom: 0;
+        box-sizing: border-box; /* Wichtig für Padding und Höhe */
+        /* Übergang für justify-content ist nicht direkt animierbar, aber die anderen Eigenschaften schon */
+        transition: opacity 0.35s ease-in-out, max-height 0.35s ease-in-out, padding-top 0.35s ease-in-out, padding-bottom 0.35s ease-in-out, visibility 0s linear 0.35s;
+      }
+
+      .main-nav.nav-active .nav-links {
+        opacity: 1;
+        max-height: 100dvh; /* Volle dynamische Viewport-Höhe als Ziel für Animation */
+        height: 100dvh; /* Stellt sicher, dass es immer die volle Höhe einnimmt */
+        visibility: visible;
+        padding-top: 60px; /* Oberen Abstand etwas reduziert, da die Schrift größer wird */
+        padding-bottom: 60px; /* Mehr Abstand unten für die größeren Links und den gewünschten Freiraum */
+        justify-content: flex-end; /* Schiebt die Menüpunkte nach unten */
+        transition: opacity 0.35s ease-in-out, max-height 0.35s ease-in-out, padding-top 0.35s ease-in-out, padding-bottom 0.35s ease-in-out, visibility 0s linear 0s;
+      }
+
+      .main-nav .nav-links li {
+        margin: 0;
+        width: 100%;
+        text-align: left; /* Linksbündige Ausrichtung für den Text in li */
+      }
+      .main-nav .nav-links li a {
+        padding: 10px 30px; /* Vertikales Padding reduziert, horizontales Padding für linken Einzug */
+        /* padding-bottom: 15px; /* Erhöht den Abstand unter jedem Link-Text, falls gewünscht */
+        display: block;
+        width: 100%;
+        box-sizing: border-box;
+        color: #0c0c0c !important; /* Textfarbe im mobilen Menü auf Dunkel geändert */
+        font-size: 3.5rem; /* Schriftgröße weiter erhöht */
+        font-weight: 300; /* Schriftgewicht auf Light (300) gesetzt */
+        line-height: 1.3; /* Angepasste Zeilenhöhe für große Schrift */
+      }
+      .main-nav .nav-links li a .menu-item-number {
+        position: relative; /* Erforderlich für z-index */
+        z-index: 10;        /* Stellt sicher, dass es über dem Link-Text liegt */
+        display: block;
+        font-size: 1rem;  /* Zurück zur kleinen Schriftgröße */
+        color: #6e370e;
+        /* margin-bottom: 2px; /* Kleiner Abstand, um Nummer über dem Text zu positionieren - wird durch top/left ersetzt/ergänzt */
+        font-weight: 300; /* Gleiches Gewicht wie der Link */
+        line-height: 1; /* Enge Zeilenhöhe für die Nummer */
+        top: 6px; /* Verschiebt die Nummer 10px nach unten */
+        left: 3px; /* Verschiebt die Nummer 3px nach rechts */
+      }
+      .main-nav .nav-links li a::after { /* Hover-Linie im mobilen Menü entfernen */
+        display: none;
+      }
+
+      .hamburger-menu {
+        display: block; /* Hamburger-Icon auf Mobilgeräten anzeigen */
+      }
+
+      /* Standard Desktop Navigationslinks ausblenden, da sie durch das mobile Menü ersetzt werden */
+      /* Dies wird erreicht, indem .nav-links oben für mobile Geräte neu gestylt wird. */
+      /* Die Desktop-spezifischen Abstände etc. werden durch die mobilen Styles überschrieben. */
+      /* Hero Section Anpassungen für Mobilgeräte */
+      .hero-section {
+        align-items: flex-start; /* Inhalt linksbündig ausrichten */
+        justify-content: flex-start;
+        padding-top: 220px; /* Abstand nach oben deutlich vergrößert */
+        padding-left: 20px;   /* Seitlicher Abstand für den Inhalt */
+        margin-bottom: -15vh;
+        padding-right: 0;  /* Rechter Rand für h1 entfernt (übernimmt jetzt die volle Breite) */
+        height: 85vh; /* Höhe reduzieren, um die Lücke durch Bildverschiebung zu schließen */
+        text-align: left;     /* Standard-Textausrichtung für Kinder (h1, h2) */
+      }
+
+      /* Hero Section Anpassungen für Mobilgeräte */
+      .hero-section h1 {
+        font-size: 39px; /* Schriftgröße für h1 um 1px reduziert */
+        margin-bottom: 15px; /* Angepasster Abstand */
+        /* text-align: left; wird von .hero-section geerbt */
+      }
+
+      .hero-section h2 {
+        font-size: 20px; /* Kleinere Schriftgröße für h2 */
+        line-height: 1.4; /* Ggf. Zeilenhöhe anpassen */
+        margin-top: 10px; /* Angepasster Abstand oben */
+        margin-bottom: 20px; /* Angepasster Abstand unten */
+        padding-right: 20px; /* Rechten Innenabstand für h2 auf Mobilgeräten wiederherstellen */
+        /* text-align: left; wird von .hero-section geerbt */
+        /* padding-left und padding-right sind nicht mehr nötig, da .hero-section Padding hat */
+      }
+
+      /* Hintergrundbild der Hero-Section auf Mobilgeräten nach oben verschieben */
+      .hero-background {
+        background-position: center calc(50% - 15vh); /* Bild um 15vh nach oben verschoben (nur mobil) */
+        min-height: 100%; /* Stellt sicher, dass min-height sich an die 85vh der .hero-section anpasst */
+                          /* Überschreibt die globale min-height: 100vh; für Mobilgeräte */
+      }
+      
+      /* Info Section Anpassungen für Mobilgeräte */
+      .info-section {
+        flex-direction: column; /* Spalten untereinander anordnen */
+        padding: 40px 20px; /* Weniger Padding auf Mobilgeräten */
+        gap: 20px; /* Reduzierter Abstand zwischen den Spalten */
+      }
+
+      .info-section .left-column {
+        flex-basis: auto; /* Breite automatisch anpassen */
+        padding-top: 0; /* Kein extra Abstand oben */
+        justify-content: flex-start; /* Inhalt linksbündig */
+        margin-bottom: 10px; /* Kleiner Abstand zur rechten Spalte */
+      }
+
+      .info-section .right-column {
+        flex-basis: auto; /* Breite automatisch anpassen */
+        padding-right: 0; /* Kein extra Abstand rechts */
+        padding-top: 0; /* Kein extra Abstand oben */
+      }
+
+      .info-section .right-column .welcome-text {
+        font-size: 36px; /* Deutlich kleinere Schriftgröße für den Willkommenstext */
+      }
+
+      /* Footer Anpassungen für Mobilgeräte */
+      .main-footer {
+        height: auto; /* Höhe automatisch anpassen */
+        padding: 40px 20px; /* Padding für Mobilgeräte */
+        flex-direction: column; /* Elemente untereinander anordnen */
+        text-align: left; /* Standard-Textausrichtung für den Footer-Inhalt auf links geändert */
+      }
+
+      .footer-top-left-content {
+        position: static; /* Positionierung aufheben */
+        margin-bottom: 40px; /* Abstand zum nächsten Element */
+        text-align: left; /* Inhalt linksbündig */
+      }
+
+      .footer-new-title {
+        font-size: 48px; /* Deutlich kleinere Schriftgröße */
+        line-height: 1.3;
+        margin-bottom: 30px; /* Weniger Abstand zum Button */
+        /* Animation bleibt, aber Startposition und Sichtbarkeit werden beibehalten */
+        transform: translateY(50px); /* Kleinere Startverschiebung */
+      }
+
+      .footer-new-button {
+        font-size: 18px; /* Kleinere Schriftgröße */
+        padding: 10px 40px; /* Angepasstes Padding */
+      }
+      .footer-new-button:hover {
+        padding: 9px 39px; /* Hover-Padding anpassen */
+      }
+
+      .footer-logo-wrapper {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end; /* Logo am unteren Rand des Wrappers ausrichten */
+        z-index: 0; /* Stellt sicher, dass es hinter dem anderen Inhalt liegt */
+        opacity: 0.1; /* Logo noch transparenter oder ggf. ausblenden (display: none;) */
+        overflow-x: hidden; /* Verhindert, dass das Logo horizontales Scrollen verursacht */
+        margin-bottom: 0; /* Entfernt, da absolute Positionierung */
+        order: unset; /* Entfernt, da absolute Positionierung */
+        padding-bottom: 20px; /* Abstand des Logos zum unteren Rand des Footers */
+        box-sizing: border-box; /* Stellt sicher, dass Padding die Höhe nicht beeinflusst */
+      }
+
+      .footer-logo .bazara-style {
+        font-size: 80px; /* Weiter verkleinert für mobile Ansicht */
+      }
+      .footer-logo .safia-style {
+        font-size: 85px; /* Weiter verkleinert für mobile Ansicht */
+      }
+      .footer-logo .subtitle-style {
+        font-size: 16px; /* Weiter verkleinert für mobile Ansicht */
+        margin-top: 8px; /* Angepasster Abstand nach oben */
+      }
+
+      .footer-bottom-wrapper {
+        position: relative; /* Notwendig für z-index und um über dem Logo zu liegen */
+        z-index: 1; /* Stellt sicher, dass dieser Container über dem Logo-Wrapper liegt */
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start; /* Alle unteren Elemente linksbündig ausrichten */
+        width: 100%;
+      }
+
+      .footer-bottom-left-text {
+        position: static;
+        font-size: 20px; /* Kleinere Schriftgröße */
+        margin-bottom: 30px; /* Abstand zum nächsten Block */
+        text-align: left; /* Text linksbündig */
+      }
+
+      .footer-contact-hours-container {
+        position: static;
+        flex-direction: column; /* Kontakt und Öffnungszeiten untereinander */
+        align-items: flex-start; /* Spalten linksbündig ausrichten */
+        width: 100%;
+        font-size: 14px; /* Etwas größere Basisschrift für Lesbarkeit */
+        margin-bottom: 30px; /* Abstand zum nächsten Block */
+      }
+
+      .footer-contact-column,
+      .footer-hours-column {
+        flex-basis: auto; /* Automatische Breite */
+        padding-left: 0; /* Linken Einzug entfernen */
+        margin-right: 0; /* Rechten Abstand entfernen */
+        text-align: left; /* Text in den Spalten linksbündig */
+        margin-bottom: 20px; /* Abstand zwischen Kontakt und Öffnungszeiten */
+      }
+      .footer-contact-column:last-child,
+      .footer-hours-column:last-child {
+        margin-bottom: 0;
+      }
+
+      .footer-hours-details {
+        display: flex; /* Sicherstellen, dass es ein Flex-Container ist */
+        flex-direction: row; /* Tage und Zeiten nebeneinander */
+        justify-content: space-between; /* Verteilt den Platz zwischen den Elementen */
+        width: 100%; /* Nimmt die volle Breite des Elternelements ein */
+      }
+      .footer-hours-days,
+      .footer-hours-times {
+        flex-basis: auto; /* Lässt die Breite sich an den Inhalt anpassen, kann bei Bedarf angepasst werden */
+        text-align: left; /* Tage und Zeiten linksbündig */
+        padding-right: 0; /* Rechten Einzug entfernen */
+        margin-right: 0; /* Rechten Abstand entfernen */
+      }
+      .footer-hours-days { margin-bottom: 0; } /* Entfernt den unteren Abstand, da sie jetzt nebeneinander sind */
+      .footer-hours-times { text-align: right; } /* Zeiten rechtsbündig innerhalb ihres Containers */
+
+      .footer-bottom-right-links {
+        position: static;
+        text-align: left; /* Links linksbündig */
+        margin-top: 20px; /* Abstand nach oben, falls es das letzte Element ist */
+      }
+      .footer-bottom-right-links a {
+        font-size: 14px; /* Etwas größere Schrift */
+        margin-bottom: 10px; /* Mehr Abstand zwischen den Links */
+      }
+    }
   </style>
 </head>
 <body>
@@ -1311,11 +1626,16 @@
       </a>
     </div>
     <ul class="nav-links">
-      <li><a href="/">Home</a></li>
-      <li><a href="/leistungen">Leistungen</a></li>
-      <li><a href="/faq">FAQ</a></li>
-      <li><a href="/kontakt">Kontakt</a></li>
+      <li><a href="/"><span class="menu-item-number">01</span>Home</a></li>
+      <li><a href="/leistungen"><span class="menu-item-number">02</span>Leistungen</a></li>
+      <li><a href="/faq"><span class="menu-item-number">03</span>FAQ</a></li>
+      <li><a href="/kontakt"><span class="menu-item-number">04</span>Kontakt</a></li>
     </ul>
+    <div class="hamburger-menu" role="button" aria-label="Menü umschalten" aria-expanded="false" aria-controls="nav-links-list">
+      <span class="bar bar1"></span>
+      <span class="bar bar2"></span>
+      <span class="bar bar3"></span>
+    </div>
   </nav>
 
   <div class="hero-section">
@@ -2032,6 +2352,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       const mainNav = document.querySelector('.main-nav');
       const navLinksUl = document.querySelector('.nav-links'); // Selektiert das <ul> Element
+      if (navLinksUl) navLinksUl.id = 'nav-links-list'; // ID für aria-controls hinzufügen
       const heroBackground = document.querySelector('.hero-background');
       const heroTitle = document.querySelector('.hero-section h1'); // Bleibt für die neue Animation
       const welcomeText = document.querySelector('.info-section .right-column .welcome-text');
@@ -2119,10 +2440,10 @@
         }
 
         if (shouldBeDark) {
-          navLinksUl.classList.add('dark-text');
+          mainNav.classList.add('nav-text-dark');
           mainNav.classList.add('strong-blur'); // Stärkeren Blur hinzufügen
         } else {
-          navLinksUl.classList.remove('dark-text');
+          mainNav.classList.remove('nav-text-dark');
           mainNav.classList.remove('strong-blur'); // Stärkeren Blur entfernen
         }
         handleHeroZoom();
@@ -2332,6 +2653,39 @@
         createDots(); 
         updateSlideshowVisuals(); // Stellt sicher, dass der erste Slide und der aktive Dot korrekt angezeigt werden
         startAutoplay(); // Autoplay initial starten
+      }
+    });
+
+    // Hamburger Menu Toggle Logik
+    document.addEventListener('DOMContentLoaded', function() {
+      const mainNav = document.querySelector('.main-nav');
+      const hamburgerMenu = document.querySelector('.hamburger-menu');
+      const navLinksList = document.getElementById('nav-links-list'); // ul.nav-links
+      const body = document.body;
+      const htmlElement = document.documentElement; // HTML-Element abrufen
+
+      if (hamburgerMenu && mainNav && navLinksList) {
+        hamburgerMenu.addEventListener('click', () => {
+          mainNav.classList.toggle('nav-active');
+          const isExpanded = mainNav.classList.contains('nav-active');
+          hamburgerMenu.setAttribute('aria-expanded', isExpanded);
+          // Scrollen verhindern/erlauben
+          body.style.overflow = isExpanded ? 'hidden' : '';
+          htmlElement.style.overflow = isExpanded ? 'hidden' : '';
+        });
+
+        // Menü schließen, wenn ein Link geklickt wird (im mobilen Menü)
+        navLinksList.querySelectorAll('a').forEach(link => {
+          link.addEventListener('click', () => {
+            if (mainNav.classList.contains('nav-active')) {
+              // Scrollen wieder erlauben
+              mainNav.classList.remove('nav-active');
+              hamburgerMenu.setAttribute('aria-expanded', 'false');
+              body.style.overflow = '';
+              htmlElement.style.overflow = '';
+            }
+          });
+        });
       }
     });
   </script>
