--- a/leistungen.html
+++ b/leistungen.html
@@ -1453,6 +1453,7 @@
       /* Allgemeine Anpassungen für .leistungen-section auf Mobilgeräten */
       .leistungen-section {
         padding: 40px 20px; /* Weniger Padding */
+        padding-bottom: 0px;
       }
       .leistungen-section .sub-heading-container {
         /* Ggf. Anpassungen, falls der Container anders auf Mobilgeräten aussehen soll */
