--- a/leistungen.html
+++ b/leistungen.html
@@ -1698,7 +1698,7 @@
 
       /* Anpassungen für #moderne-diagnostik (Sprechzeiten-Section in leistungen.html) */
       .sprechzeiten-section#moderne-diagnostik { /* Spezifischer Selektor */
-        padding: 0 20px 40px 20px; /* Weniger Padding */
+        padding: 0 20px 20px 20px; /* Unteren Abstand reduziert (war 40px) */
       }
       .sprechzeiten-section#moderne-diagnostik .section-divider {
         margin-bottom: 40px; /* Weniger Abstand */
