--- a/leistungen.html
+++ b/leistungen.html
@@ -1698,7 +1698,7 @@
 
       /* Anpassungen für #moderne-diagnostik (Sprechzeiten-Section in leistungen.html) */
       .sprechzeiten-section#moderne-diagnostik { /* Spezifischer Selektor */
-        padding: 0 20px 20px 20px; /* Unteren Abstand reduziert (war 40px) */
+        padding: 0 20px 5px 20px; /* Kleinen unteren Abstand (5px) wieder eingefügt, um grauen Bereich zu vermeiden */
       }
       .sprechzeiten-section#moderne-diagnostik .section-divider {
         margin-bottom: 40px; /* Weniger Abstand */
