--- a/leistungen.html
+++ b/leistungen.html
@@ -1470,6 +1470,11 @@
         margin-bottom: 40px; /* Weniger Abstand nach unten für Divider in dieser Sektion */
       }
 
+      /* Spezifische Anpassung für den oberen Abstand von #chronische-betreuung auf Mobilgeräten */
+      .leistungen-section#chronische-betreuung {
+        padding-top: 15px; /* Oberen Abstand deutlich reduziert (war 40px durch .leistungen-section allgemein) */
+      }
+
       /* Anpassungen für #akute-behandlung (Notfall-Info) */
       #akute-behandlung .notfall-info-wrapper {
         flex-direction: column;
